# tourist

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml
aeson/: TUTORIAL.typ  tour-aeson.cabal
aeson/app/: Main.hs
docs/: combinators.rst  conf.py  index.rst  monads.rst  uri-syntax.rst
servant/: CHANGELOG.md  LICENSE  tour-servant.cabal
servant/client/: Main.hs
servant/server/: Main.hs
servant/src/NWS/: Product.hs  Server.hs
text/: CHANGELOG.md  tour-text.cabal
text/src/Parser/: URI.hs
time/: tour-time.cabal
tourist-text/: tourist-text.cabal
tourist-text/src/: Tour.hs
tourist-text/test/: Main.hs
tourist-time/: CHANGELOG.md  LICENSE  tourist-time.cabal
tourist-time/src/: Tour.hs
