cabal-version:      3.4
name:               tour-text
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             wtroughton
maintainer:         winston@troughton.net
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Tour, Parser.URI
    build-depends:    base ^>=4.18.2.1,
                      megaparsec,
                      text,
                      
    hs-source-dirs:   src
    default-language: GHC2021

test-suite tour-text-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        tour-text,
        tasty,
        tasty-hunit
